<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <sintef.android.gravity.wizard.FloatingHintEditText
        android:id="@+id/dialog_next_of_kin_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wizard_next_of_kin_name"
        android:inputType="textPersonName"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"/>

    <sintef.android.gravity.wizard.FloatingHintEditText
        android:id="@+id/dialog_next_of_kin_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wizard_next_of_kin_telephone"
        android:inputType="phone"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        style="@style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            style="@style/ButtonBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selectable_item_background"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/ok_button"
            style="@style/ButtonBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selectable_item_background"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>