<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="48dp"
    android:paddingBottom="48dp"
    android:paddingRight="24dp"
    android:paddingLeft="24dp">

    <TextView
        android:id="@+id/wizard_next_of_kin_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:text="@string/wizard_next_of_kin_header"
        android:textSize="42sp"
        android:textColor="@color/white"
        android:gravity="center"/>

    <sintef.android.gravity.wizard.FloatingHintEditText
        android:id="@+id/wizard_next_of_kin_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wizard_next_of_kin_name"
        android:inputType="textPersonName"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_below="@+id/wizard_next_of_kin_header"/>

    <sintef.android.gravity.wizard.FloatingHintEditText
        android:id="@+id/wizard_next_of_kin_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wizard_next_of_kin_telephone"
        android:inputType="phone"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_below="@+id/wizard_next_of_kin_name"/>

    <ImageView
        android:layout_width="156dp"
        android:layout_height="156dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/wiz_hand"/>

</RelativeLayout>